src/objects/Document_Type_Search_Result_Field__mdt.object
<CustomObject>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Document_Type_Field__c</fullName>
        <label>Document Type Field</label>
        <referenceTo>Document_Type_Field__mdt</referenceTo>
        <relationshipLabel>Document Type Search Result Fields</relationshipLabel>
        <relationshipName>Document_Type_Search_Result_Fields</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <referenceTo>Document_Type__mdt</referenceTo>
        <relationshipName>Document_Type_Search_Result_Fields</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Document Type Search Result Field</label>
    <pluralLabel>Document Type Search Result Fields</pluralLabel>
</CustomObject>